--- a/assets/style.css
+++ b/assets/style.css
@@ -1,207 +1,140 @@
-@font-face {
-    font-family: 'Poppins'; /* Name you want to use for the font */
-    src: url(https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap) format('woff'); /* URL to the font file and its format */
-    /* You can include additional source formats here */
-}
-
-
-
-
-*
-{
-
-    padding: 0;
-    box-sizing: border-box;
-    
-}
-
-body {
-    background:url(../assets/pexels_videos_2818548\ \(2160p\).mp4) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    font-family: "Poppins", sans-serif
-    }
-
-    .header
-{
-    position: fixed;
-    top: 0%;
-    left: 0;
-    width: 100%;
-    padding: 20px 100px;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-
-}
-.logo
-{
-   font-size: 48px;
-   color: #000000;
-   text-decoration: none;
-   font-weight: 700;
-   font-family:'Poppins';
-
-
-}
-.navbar a 
-{
-position: relative;
-font-size: 18px;
-color: #000000;
-font-weight: 700;
-text-decoration: none;
-margin-left: 40px;
-font-family: "Poppins", sans-serif
-}
-.navbar a::before
-{
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 0%;
-    height: 2px;
-    background: #000000;
-    transition: .3s;
-}
-.navbar a:hover:before
-{
-    width: 100%;
-}
-
-ul {
-    display: inline;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
-div
-{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%) skewy(-5deg);
-    border: 4px solid #f30dd7;
-    padding:20px 50px ;
-    border-radius: 10px;
-    box-shadow: 0 0 10px ,0 0 30px #f30dd7, 0 0 10px #f30dd7, inset 0 0 30px #f30dd7;
-    animation: animate .2s linear infinite;
-
-}
-
-div::before
-{
-    content:"" ;
-    position: absolute;
-    bottom: 80px;
-    width: 100%;
-    left: 0;
-    height: 4px;
-    background:#ffffff ;
-    box-shadow: 0 0 10px #f30dd7, 0 0 30px #f30dd7;
-    z-index: -1 ;
-}
-div::after
-{
-    content:"" ;
-    position: absolute;
-    top: 80px;
-    width: 100%;
-    left: 0;
-    height: 4px;
-    background:#ffffff ;
-    box-shadow: 0 0 10px #f30dd7, 0 0 30px #f30dd7;
-    z-index: -1 ;
-}
-h1
-{
+*{
     padding: 0;
     margin: 0;
-    font-size: 8em;
-    color: #ffffff;
-    text-shadow:10px #f30dd7 , 30px #f30dd7, 10px #f30dd7 , 20px #f30dd7,;
-    -webkit-text-fill-color: #f30dd7;
-    
+    box-sizing: border-box;
+    font-family:"Poppins", sans-serif
+}
+body{
+    overflow: hidden;
+}
+.container{
+    width: 100%;
+    min-height: 100vh;
+    background-color: #f3f5f8;
 
 }
-h1 span 
-{
-    animation: animate .5s linear infinite;
+nav{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    height: 80px;
+    line-height: 80px;
+    z-index: 111;
 }
-h1 span:nth-child(1)
-{
-    animation-delay: .25s;
+.logo{
+    display: flex;
+    font-size: 40px;
+    font-weight: 800;
+    color:#3d535f;
+    letter-spacing: 3px;
+    text-transform: uppercase;
 }
-h1 span:nth-child(2)
-{
-    animation-delay: .25s;
+b{
+    font-size: 70px;
+    color: #7f00ff;
 }
-h1 span:nth-child(3)
-{
-    animation-delay: .2s;
+
+.navItems{
+    display: flex;
 }
-h1 span:nth-child(4)
-{
-    animation-delay: .35s;
+
+.navItems li {
+
+    list-style: none;
+    margin: 0 15px;
+
 }
-h1 span:nth-child(5)
-{
-    animation-delay: .25s;
+.navItems li a{
+    font-size: 25px;
+    color: #3d535f;
+    letter-spacing: 3px;
+    text-decoration: none;
+    text-transform: capitalize;
 }
-h1 span:nth-child(6)
-{
-    animation-delay: .4s;
-}
-h1 span:nth-child(7)
-{
-    animation-delay: .25s;
-}
-h1 span:nth-child(8)
-{
-    animation-delay: .25s;
-}
-@keyframes animate
-{
-    0%
-    {
-        opacity: 1;
-    }
-    30%
-    {
-        opacity: 1;
-    }
-    40%
-    {
-        opacity: .8;
-    }
-    50%
-    {
-        opacity: 1;
-    }
-    100%
-    {
-        opacity: 1;
-    }
+
+.navItems li a:hover a{
+    color: #7f00ff;
 }
 
 
+.links a{
+    font-size: 30px;
+    color:#3d535f;
+    margin: 25px 10px; 
+}
+
+.links a:hover{
+    color: #7f00ff;
+}
+
+.wrapper{
+    display:flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10%;
+    overflow: hidden;
+}
+
+.cols{
+    width:50%;
+}
+.topline{
+    display: block;
+    position: relative;
+    font-size: 35px;
+    letter-spacing:5px ;
+    color:#3d535f;
+}
+.topline::after{
+    position: absolute;
+    content: '';
+    height: 4px;
+    width: 45px;
+    bottom: 10px;
+    color: #7f00ff;
+}
+h1{
+    display: block;
+    font-size: 7em;
+    font-weight: 900;
+    color: #3d535f;
+}
+
+.mulitText{
+    color: #7f00ff;
+    text-transform: capitalize;
+
+}
+p{
+    display: block;
+    width: 90%;
+    font-size: 1.2em;
+    color: #3d535f;
+
+}
+.btns{
+
+    width: 100%;
+    position: relative;
+    left: 15px;
+
+}
+button{
+    outline:none;
+    border: none;
+    cursor: pointer;
+    font-size: 25px;
+    font-weight: 400;
+    color: #ffff;
+    background-color:#3d535f ;
+    padding: 8px 14px;
+    margin:40px 5px;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    box-shadow: 0 15px 10px rgb(0 0 0 4);
+    border-radius: 10px;
 
 
-
-
-
-
-
-
-
-
-
+}
