--- a/assets/style.css
+++ b/assets/style.css
@@ -52,10 +52,12 @@ b{
     text-transform: capitalize;
 }
 
-.navItems li a:hover a{
+.navItems li a:hover a,
+.links a:hover{
+    color: #7f00ff;
+
     color: #7f00ff;
 }
-
 
 .links a{
     font-size: 30px;
@@ -63,18 +65,25 @@ b{
     margin: 25px 10px; 
 }
 
-.links a:hover{
-    color: #7f00ff;
-}
-
 .wrapper{
     display:flex;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 80px);
     justify-content: center;
     align-items: center;
     padding: 0 10%;
     overflow: hidden;
+}
+.wrapper::before{
+    position: absolute;
+    content: '';
+    height: 600px;
+    width: 600px;
+    border-radius: 50%;
+    left: -12%;
+    top: 40%;
+    background: linear-gradient(45deg, #7f00ff, #ffffff);
+    animation: object 6s linear infinite;
 }
 
 .cols{
@@ -138,3 +147,46 @@ button{
 
 
 }
+button:hover {
+    background-color: #7f00ff;
+}
+.imgbox{
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+}
+.imgbox img {
+
+    position: relative;
+    height:100%;
+    width: calc(130% - 80px);
+    top: -100px;
+    right: 50px;
+    transform: rotateY(180deg);
+    animation:  animateUser 4s linear infinite;
+    }
+    @keyframes animateUser{
+        50%{
+            right: 30px;
+            top:-90px 
+        }
+    }
+    .imgbox #splash{
+
+        position:absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(-35deg);
+        width: 160%;
+        filter: saturate(200%);
+        animation: animate 4s linear inherit;
+    }
+    @keyframes animate{
+        50%{
+            top: 49%;
+            left: 51%;
+            width: 155%;      
+            
+        }
+    }
