--- a/assets/style.css
+++ b/assets/style.css
@@ -1,243 +1,178 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
+    
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family:"Poppins", sans-serif
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+text-decoration: none;
+border: none;
+outline: none;
+scroll-behavior: smooth;
+font-family: 'Poppins', sans-serif;
 }
+
+:root 
+{
+    --background-color: #081b29;
+    --secondbg-color: #112e42;
+    --text-color: #ededed;
+    --main-color: #00abf0;
+}
+
+html{
+font-size: 62.5%;
+overflow-x: hidden;
+}
+
 body{
-    overflow:scroll;
+    background: var(--background-color);
+    color: var(--text-color);
 }
-.container{
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
+    padding: 2rem 9%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo {    
+    font-size: 2.5rem;
+    color: var(--text-color);
+    font-weight: 600;
+}
+
+.navbar a { 
+font-size: 1.7rem;
+color: var(--text-color);
+font-weight: 500;
+margin-left: 3,5rem;
+transition: .3s;
+}
+
+.navbar a:hover,
+.navbar a.active{
+    color: var(--main-color);
+}
+
+#menu-icon{
+    font-size: 3.6rem;
+    color: var(--text-color);
+    cursor: pointer;
+    display: none;
+
+
+
+}
+
+section {
     min-height: 100vh;
-    background-color: #f3f5f8;
+    padding: 10rem 9% 2rem;
 
 }
-nav{
+
+.home {
     display: flex;
-    width: 100%;
-    justify-content: space-around;
-    height: 80px;
-    line-height: 80px;
-    z-index: 111;
+    align-items: center;
+    padding: 0  9%;
 }
-.logo{
+
+.home-content{
+max-width: 60rem;
+}
+
+.home-content h1 {
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3rem;
+}
+
+.home-content .text-animate {
+    position: relative;
+    width: 32.8rem;
+
+}
+
+.home-content .text-animate h3{
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: transparent;
+    -webkit-text-stroke: .7px var(--main-color);
+}
+
+.home-content p { 
+    font-size: 1.6rem;
+    margin: 2rem 0 4rem;
+
+}
+
+.btn-box{
+    position: relative;
     display: flex;
-    font-size: 40px;
-    font-weight: 800;
-    color:#3d535f;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-}
-b{
-    font-size: 70px;
-    color: #7f00ff;
+    justify-content: space-between;
+    width: 34.5rem;
+    height: 5rem;
+
 }
 
-.navItems{
+.btn-box .btn{
+    position: relative;
     display: flex;
-}
-
-.navItems li {
-
-    list-style: none;
-    margin: 0 15px;
-
-}
-.navItems li a{
-    font-size: 25px;
-    color: #3d535f;
-    letter-spacing: 3px;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-.navItems li a:hover a,
-.links a:hover{
-    color: #7f00ff;
-
-    color: #7f00ff;
-}
-
-.links a{
-    font-size: 30px;
-    color:#3d535f;
-    margin: 25px 10px; 
-}
-
-.wrapper{
-    display:flex;
-    width: 100%;
-    height: calc(100vh - 80px);
     justify-content: center;
     align-items: center;
-    padding: 0 10%;
+    width: 15rem;   
+    height: 100%;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .8rem;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    color:var(--background-color);
+    z-index: 1;
     overflow: hidden;
+    transition: .5s;
 }
-.wrapper::before{
-    position: absolute;
+
+.btn-box .btn:hover{
+    color: var(--text-color);
+}
+
+.btn-box .btn:nth-child(2){
+    background:transparent;
+    color: var(--main-color);
+}
+
+
+.btn-box .btn:nth-child(2)::before{
+background-color: var(--main-color);
+}
+
+.btn-box .btn:nth-child(2):hover{
+    color: var(--text-colorcd);
+}
+
+
+.btn-box .btn::before{
+
     content: '';
-    height: 600px;
-    width: 600px;
-    border-radius: 50%;
-    left: -12%;
-    top: 40%;
-    background: linear-gradient(45deg, #7f00ff, #ffffff);
-    animation: object1 7s linear infinite;
-}
-.wrapper::after{
-    position: absolute;
-    content: '';
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-    left: 35%;
-    top: 12%;
-    background: linear-gradient(45deg, #7f00ff, #ffffff);
-    animation: object2 7s linear infinite;
-}
-@keyframes object1{
-    50%{
-        left: 35%;
-        top: 10%;
-    }
-}
-@keyframes object2{
-    50%{
-        left: -13%;
-        top: 41%;
-    }
-}
-
-
-
-.cols{
-    width:50%;
-}
-.cols0{
-    width: 60%;
-    z-index: 5;
-
-
-}
-.topline{
-    display: block;
-    position: relative;
-    font-size: 35px;
-    letter-spacing:5px ;
-    color:#3d535f;
-}
-.topline::after{
-    position: absolute;
-    content: '';
-    height: 4px;
-    width: 45px;
-    bottom: 10px;
-    color: #3d535f;
-}
-h1{
-    display: block;
-    font-size: 7em;
-    font-weight: 900;
-    color: #7f00ff;
-}
-
-.mulitText{
-    color: #7f00ff;
-    text-transform: capitalize;
-
-}
-p{
-    display: block;
-    width: 90%;
-    font-size: 1.2em;
-    color: #3d535f;
-
-}
-.btns{
-
-    width: 100%;
-    position: relative;
-    left: 15px;
-    border-radius: 10px;
-
-}
-button{
-    outline:none;
-    border: none;
-    cursor: pointer;
-    font-size: 25px;
-    font-weight: 400;
-    color: #ffff;
-    background-color:#3d535f ;
-    padding: 8px 14px;
-    margin:40px 5px;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-    box-shadow: 0 15px 10px rgb(0 0 0 4);
-    border-radius: 10px;
-
-
-}
-button:hover {
-    background-color: #7f00ff;
-}
-.imgbox{
-    position: relative;
+    position:absolute;
+    top:0;
+    left: 0;
     width: 100%;
     height: 100%;
+    background: var(--main-color);
+    z-index: -1;
+    transition: .5s;
 
 }
-.imgbox img {
 
-    position: relative;
-    height:100%;
-    width: calc(130% - 80px);
-    top: -100px;
-    right: 50px;
-    transform: rotateY(180deg);
-    animation:  animateUser 4s linear infinite;
-    }
-    @keyframes animateUser{
-        50%{
-            right: 30px;
-            top:-90px 
-        }
-    }
-    .imgbox #splash{
 
-        position:absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) rotate(-35deg);
-        width: 160%;
-        filter: saturate(200%);
-        animation: animate 4s linear inherit;
-    }
-    @keyframes animate{
-        50%{
-            top: 49%;
-            left: 51%;
-            width: 155%;      
-            
-        }
-    }
-    .about{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 2rem;
-        background: #ffffff;
-        padding-bottom: 6rem;
-    }
-    .heading{ 
-        font-size: 5rem;
-        margin-bottom: 3rem;
-        text-align: center ;
-    }
-
-    .about-img{
-
-    }
-    
+.btn-box .btn:hover::before{
+    width:100%;
+}
